--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.22",
+    "firebase": "^11.0.2",
+    "firebase-admin": "^12.7.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
     "next": "^15.5.4",
