--- a/.env.example
+++ b/.env.example
@@ -26,11 +26,19 @@ ADMIN_PASSWORD=your_secure_password_here
 # Database (Optional - when you add database)
 DATABASE_URL=
 
-# Email Service (Optional - when you add email)
-SMTP_HOST=
-SMTP_PORT=
-SMTP_USER=
-SMTP_PASS=
+# Email Service (Required for OTP verification)
+# For Gmail:
+# 1. Enable 2-factor authentication in your Google Account
+# 2. Go to Security → App Passwords
+# 3. Generate an app password for "Mail"
+# 4. Use the generated password below (not your regular Gmail password)
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASSWORD=your-app-specific-password
+
+# Alternative Email Services (choose one):
+# SendGrid: EMAIL_SERVICE=sendgrid, SENDGRID_API_KEY=your-key
+# AWS SES: EMAIL_SERVICE=ses, AWS_REGION=us-east-1, AWS_ACCESS_KEY_ID=..., AWS_SECRET_ACCESS_KEY=...
+# Mailgun: EMAIL_SERVICE=mailgun, MAILGUN_API_KEY=your-key, MAILGUN_DOMAIN=your-domain
 
 # Newsletter Service (Optional - when you add newsletter)
 MAILCHIMP_API_KEY=
