--- a/.env.example
+++ b/.env.example
@@ -57,9 +57,10 @@ NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=your-cloud-name
 CLOUDINARY_API_KEY=your-api-key
 CLOUDINARY_API_SECRET=your-api-secret
 
-# Payment Processing - PhonePe
-# Get credentials from: https://business.phonepe.com/
+# Payment Processing - PhonePe V2 API
+# Get credentials from: https://business.phonepe.com/developer-settings
 PHONEPE_MERCHANT_ID=your_merchant_id
-PHONEPE_SALT_KEY=your_salt_key
-PHONEPE_SALT_INDEX=1
+PHONEPE_CLIENT_ID=your_client_id
+PHONEPE_CLIENT_SECRET=your_client_secret
+PHONEPE_CLIENT_VERSION=1
 PHONEPE_ENV=UAT
